--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # required metadata
 sonar.projectKey=de.htwg.se.tripletriad
-sonar.projectName=Triple Triad
+sonar.projectName=SE2016SS-05-TripleTriad
 sonar.projectVersion=1.0
  
 # path to source directories (required)
