--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 }
 
 sourceSets {
-    main.java.srcDir "src"
-    test.java.srcDir "test"
+    main.java.srcDir "de.htwg.se.tripletriad/src"
+    test.java.srcDir "de.htwg.se.tripletriad/test"
 }
 
 jar {
