--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,10 +4,10 @@ sonar.projectName=SE2016SS-05-TripleTriad
 sonar.projectVersion=1.0
  
 # path to source directories (required)
-sonar.sources=./src
+sonar.sources=./de.htwg.se.tripletriad/src
  
 # path to test source directories (optional)
-sonar.tests=./test
+sonar.tests=./de.htwg.se.tripletriad/test
  
 # path to project binaries (optional), for example directory of Java bytecode
 sonar.binaries=./bin
